syntax = "proto3";

package room;

option go_package = "grpc-messenger-core/proto/room";

import "google/api/annotations.proto";

// Room service for managing chat rooms
service RoomService {
  // CreateRoom creates a new chat room
  rpc CreateRoom(CreateRoomRequest) returns (RoomResponse) {
    option (google.api.http) = {
      post: "/room/create-room"
      body: "*"
    };
  }

  // GetRooms retrieves all rooms the user is a member of
  rpc GetRooms(GetRoomsRequest) returns (GetRoomsResponse) {
    option (google.api.http) = {
      post: "/room/get-rooms"
      body: "*"
    };
  }

  // JoinRoom adds a user to a room
  rpc JoinRoom(JoinRoomRequest) returns (JoinRoomResponse) {
    option (google.api.http) = {
      post: "/room/join-room"
      body: "*"
    };
  }

  // LeaveRoom removes a user from a room
  rpc LeaveRoom(LeaveRoomRequest) returns (LeaveRoomResponse) {
    option (google.api.http) = {
      post: "/room/leave-room"
      body: "*"
    };
  }
}

// Request to create a room
message CreateRoomRequest {
  string name = 1;
  string description = 2;
  int64 creator_id = 3;
}

// Room response
message RoomResponse {
  int64 id = 1;
  string name = 2;
  string description = 3;
  int64 creator_id = 4;
}

// Request to get rooms
message GetRoomsRequest {
  int64 user_id = 1;
}

// Response to a get rooms request
message GetRoomsResponse {
  repeated RoomResponse rooms = 1;
}

// Request to join a room
message JoinRoomRequest {
  int64 room_id = 1;
  int64 user_id = 2;
}

// Response to a join room request
message JoinRoomResponse {
  bool success = 1;
  string message = 2;
}

// Request to leave a room
message LeaveRoomRequest {
  int64 room_id = 1;
  int64 user_id = 2;
}

// Response to a leave room request
message LeaveRoomResponse {
  bool success = 1;
  string message = 2;
}
